# RAVEN

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  FEEDBACK.md  RAVEN.PRD  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  tsconfig.json  vercel.json  verify.ts  verify_txline.ts
data/proofs/: txline_score_18222446_seq118.json  (+1 more)
raven/: __init__.py  __main__.py  agent.py  config.py  counterfactual.py  dashboard.py  main.py
receipts/: anchored_demo.json  receipt_102.json  receipt_104.json  receipt_105.json  receipt_106.json  receipt_109.json  receipt_116.json  receipt_117.json  receipt_118.json  receipt_1197.json  receipt_1198.json  receipt_1199.json  receipt_1201.json  receipt_1202.json  receipt_1203.json  receipt_1209.json  receipt_121.json  receipt_1212.json  receipt_122.json  receipt_1281.json  receipt_1282.json  receipt_1283.json  receipt_1284.json  receipt_1285.json  receipt_1286.json  receipt_659.json  receipt_660.json  receipt_661.json  receipt_663.json  receipt_664.json  receipt_665.json  receipt_686.json  receipt_687.json  receipt_688.json  receipt_775.json  receipt_778.json
scripts/: anchor_demo_receipts.py  build_frontend.sh  download_historical.py  download_odds_replay.py  fetch_txline_score_proof.py  gen_receipts.py  live_feed.py  live_sim.py  probe_stream.py  reanchor_receipts.py  record_live_final.py  replay_metrics.py  run_counterfactual.py  run_replay.py  run_replay_anchored.py
tests/: test_agent_signals.py  test_integration_replay.py  test_normalize.py  test_quote_engine.py  test_risk_kernel.py
(+39 files in other folders)
