[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raven"
version = "1.0.0"
description = "Real-time Autonomous Verifiable Exposure Neutralizer — autonomous in-play market maker powered by TxLINE on Solana"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["trading", "market-maker", "solana", "txline", "txodds", "football", "autonomous-agent"]

dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dashboard = [
    "dash>=2.17.0",
    "plotly>=5.22.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
raven = "raven.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["raven*"]
exclude = ["node_modules*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
